[package]
name = "pathwalker"
version = "0.3.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/pathwalker"
license = "MIT"
description = "library to walk path"

[dependencies]
pathfilter = { version = "0.4.1", optional = true }
direntryfilter = { version = "0.4.1" }
moar_options = { version = "0.1.1" }
